--- a/index.html
+++ b/index.html
@@ -237,6 +237,17 @@
              class="full-height">
       </li>
 
+      <li class="bg-white">
+        <img src="slides/variety-internet-connected-devices/img/variety-internet-connected-tv.png"
+             alt=""
+             class="full-width">
+      </li>
+
+      <li class="bg-white">
+        <img src="slides/variety-internet-connected-devices/img/variety-internet-connected-devices.png"
+             alt=""
+             class="full-height">
+      </li>
 
       <li class="bg-white">
         <img src="slides/upnp/img/wiki-upnp.png"
@@ -279,6 +290,13 @@
              alt=""
              class="full-height">
       </li>
+
+      <li class="bg-white">
+        <img src="slides/bonjour/img/bonjour-wiki.png"
+             alt=""
+             class="full-height">
+      </li>
+
 
       <li>
         &nbsp;
