--- a/index.html
+++ b/index.html
@@ -321,9 +321,6 @@
              class="full-height">
       </li>
 
-
-
-
       <li>
         &nbsp;
       </li>
@@ -341,21 +338,26 @@
       <li class="bg-white">
         <img src="slides/upnp/img/wiki-upnp-addressing.png"
              alt=""
-             class="full-height">
+             class="full-width">
       </li>
 
       <li class="bg-white">
         <img src="slides/upnp/img/wiki-upnp-discovery.png"
              alt=""
-             class="full-height">
+             class="full-width">
       </li>
 
       <li class="bg-white">
-        <img src="slides/upnp/img/wiki-upnp-udp.png"
+        <img src="slides/ssdp/img/ssdp-wiki.png"
              alt=""
-             class="full-height">
+             class="full-width">
       </li>
 
+      <li class="bg-white">
+        <img src="slides/ssdp/img/ssdp-wiki-udp.png"
+             alt=""
+             class="full-width">
+      </li>
 
 
       <li class="bg-white">
