added ssdp details

--- a/index.html
+++ b/index.html
@@ -336,15 +336,17 @@
       </li>
 
       <li class="bg-white">
+        <h2>0. Addressing</h2>
         <img src="slides/upnp/img/wiki-upnp-addressing.png"
              alt=""
-             class="full-width">
+             class="full-height">
       </li>
 
       <li class="bg-white">
+        <h2>1. Discovery</h2>
         <img src="slides/upnp/img/wiki-upnp-discovery.png"
              alt=""
-             class="full-width">
+             class="full-height">
       </li>
 
       <li class="bg-white">
@@ -359,12 +361,104 @@
              class="full-width">
       </li>
 
-
       <li class="bg-white">
-        <img src="slides/upnp/img/wiki-upnp-udp.png"
+        <img src="slides/udp/img/udp-wiki.png"
              alt=""
              class="full-height">
       </li>
+
+      <li class="bg-white">
+        <img src="slides/udp/img/networkschema.png"
+             alt=""
+             class="full-width">
+      </li>
+
+      <li class="bg-white">
+        <img src="slides/udp/img/udp-wiki-uses.png"
+             alt=""
+             class="full-width">
+      </li>
+
+      <li class="bg-white">
+        <img src="slides/quic/img/quic-wiki.png"
+             alt=""
+             class="full-width">
+      </li>
+
+      <li class="bg-white">
+        <img src="slides/quic/img/http2-spdy-quic-chrome-extension.png"
+             alt=""
+             class="full-height">
+      </li>
+
+      <li class="bg-white">
+        <img src="slides/quic/img/quic-report.png"
+             alt=""
+             class="full-width">
+      </li>
+
+      <li class="bg-white">
+        <h2>1. Discovery</h2>
+        <img src="slides/upnp/img/wiki-upnp-discovery.png"
+             alt=""
+             class="full-height">
+      </li>
+
+      <li class="bg-white">
+        <img src="slides/ssdp/img/ssdp-diagram.png"
+             alt=""
+             class="full-height">
+      </li>
+
+      <li class="bg-white">
+        <img src="slides/ssdp/img/ssdp-announcement-packet.png"
+             alt=""
+             class="full-width">
+      </li>
+
+      <li class="bg-white">
+        <img src="slides/ssdp/img/ssdp-byebye.png"
+             alt=""
+             class="full-width">
+      </li>
+
+
+      <li class="bg-white">
+        <h2>2. Description</h2>
+        <img src="slides/upnp/img/wiki-upnp-description.png"
+             alt=""
+             class="full-height">
+      </li>
+
+      <li class="bg-white">
+        <img src="slides/ssdp/img/ssdp-description.png"
+             alt=""
+             class="full-width">
+      </li>
+
+      <li class="bg-white">
+        <img src="slides/ssdp/img/ssdp-description-2.png"
+             alt=""
+             class="full-height">
+      </li>
+
+      <li class="bg-white">
+        <img src="slides/ssdp/img/ssdp-description-3.png"
+             alt=""
+             class="full-width">
+      </li>
+
+
+
+
+
+      <li>
+        &nbsp;
+      </li>
+
+
+
+
 
 
 
